tests/regression/baselines/test51_mutable_variants.expected
ERROR
SyntaxError: Unexpected token <-
Note: expected tokens: ["(", "*", ",", ".", ";", "[", "`", "begin", "{", "|>", "}", r#"\"[^\\\\\"\\n\\r]*(?:\\\\[tn'\"\\\\][^\\\\\"\\n\\r]*)*\""#, r#"-?(?:0|[1-9][0-9]*)[eE]-?[0-9]+"#, r#"-?(?:0|[1-9][0-9]*)\\.[0-9]*(?:[eE]-?[0-9]+)?"#, r#"-?(?:[0-9]+)"#, r#"[<>]=?\\.?|[!=]="#, r#"[A-Za-z_]\\w*"#, r#"[\\*/%]\\.?"#, r#"[\\+\\-]\\.?|\\^"#]
Parse error occurred here:
let state_machine = {
    mut current = `Idle {};
    transition = fun new_state -> current <- new_state;
                                          ^~            
};
